Tue Mar 11 00:46:29 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ruby.c (usage): remove some unimportant lines to fit -h message
	  in a page.  [ruby-dev:34018]

Mon Mar 10 17:11:00 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_f_local_variables): local_variables should return an
	  array of symbols.  [ruby-dev:34008]

	* vm.c (collect_local_variables_in_env): ditto.

Mon Mar 10 15:53:48 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* version.c (MKSTR): make US-ASCII.  [ruby-dev:34010]

Mon Mar 10 02:08:21 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_index): if t == s + pos, the character beginning
	  from s + pos is valid.

Sun Mar  9 13:51:21 2008  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/generator.rb: Restore missing line to #params.  Patch by
	  Lincoln Stoll <lstoll at lstoll.net>

Sun Mar  9 09:52:00 2008  Eric Hodel  <drbrain@segment7.net>

	* lib/rdoc/code_objects.rb: Remove debugging Kernel#p.  Patch by
	  Lincoln Stoll <lstoll at lstoll.net>
	* lib/rdoc/generator/html.rb: Fully qualify AllReferences.  Patch by
	  Lincoln Stoll <lstoll at lstoll.net>
	* lib/rdoc/ri/writer.rb: Fix 1.8 backwards compatibility.

Sat Mar  8 18:50:57 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (isdirsep): backslash is valid path separator on cygwin too.

Sat Mar  8 06:53:48 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (search_nonascii): Use VALUE instead of unsigned long
	  because VALUE can be the fastest unsigned integer type.
	  On LLP64 unsigned long isn't the fastest.
	* string.c (str_strlen): ditto.
	* string.c (str_utf8_nth): ditto.
	* string.c (count_utf8_lead_bytes_with_ulong): ditto.

	* string.c (count_utf8_lead_bytes_with_word): renamed.

Fri Mar  7 21:27:43 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* bignum.c: fix indent.

Fri Mar  7 21:12:19 2008  Yusuke Endoh  <mame@tsg.ne.jp>

	* bignum.c (power_cache_init, power_cache_get_power0, Init_Bignum):