@@ -1,3 +1,8 @@
+Tue Mar 11 09:52:49 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* string.c (rb_str_comparable): empty strings in any encoding are
+	  compatible each other.
+
 Tue Mar 11 00:46:29 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* ruby.c (usage): remove some unimportant lines to fit -h message
